tests/errors/known_bugs/calls.py
# pylint: disable=missing-function-docstring, missing-module-docstring
r1 = range(3)
r2 = range(2,5)
